footer icons, h2 alignments, fixed ux page

--- a/style.scss
+++ b/style.scss
@@ -24,7 +24,7 @@ $project-header-color: darken(#75bdd9, 15%);
 
 $nav-link-color: #fae3d9;
 $view-button-background: darken(#75bdd9, 15%);
-$contact-icons-color: #fff;
+$contact-icons-color: #f8ede8;
 
 * {
   box-sizing: border-box;
@@ -202,6 +202,30 @@ header {
   }
 }
 
+
+#about, #skills, #projects, #contact {
+  text-align: center;
+
+  h2 {
+    font-size: 2.8rem;
+    color: $body-font-color;
+    position: relative;
+    display: inline-block;
+    z-index: 2;
+  }
+
+  h2::after {
+    content: ' ';
+    border-top: 8px solid rgba(0, 0, 0, 0.2);
+    width: 100%;
+    display: block;
+    transform: rotate(0deg) translateY(-8px);
+    z-index: 1;
+    position: absolute;
+    bottom: 2px;
+  }
+}
+
 main {
   display: flex;
   flex-direction: column;
@@ -220,14 +244,6 @@ main {
     margin: 0;
     padding: 60px 5vw 0 5vw;
     width: 100%;
-
-    h2 {
-      font-size: 2.8rem;
-      color: $body-font-color;
-      position: relative;
-      display: inline-block;
-      z-index: 2;
-    }
 
     &#about, &#skills {
       &::before, &::after {
@@ -253,7 +269,6 @@ main {
       background: #f8ede8;
       position: relative;
       margin-bottom: 40px;
-      text-align: center;
 
       &::before, &::after {
         background: #f8ede8;
@@ -311,17 +326,6 @@ main {
         }
       }
     }
-  }
-
-  h2::after {
-    content: ' ';
-    border-top: 8px solid rgba(0, 0, 0, 0.2);
-    width: 100%;
-    display: block;
-    transform: rotate(0deg) translateY(-8px);
-    z-index: 1;
-    position: absolute;
-    bottom: 2px;
   }
 
   ul {
@@ -385,30 +389,33 @@ main {
     }
   }
 
-  ul.technologies {
-    list-style-type: none;
-    display: grid;
-    grid-template-columns: repeat(3, auto);
-    margin: 0;
+  .project-about {
+    text-align: left;
+    
+    ul.technologies {
+      list-style-type: none;
+      display: grid;
+      grid-template-columns: repeat(3, auto);
+      margin: 0;
 
-    li::before {
-      content: ' ';
-      display: inline-block;
-      border: 2px solid #75bdd9;
-      border-radius: 3px;
-      width: 8px;
-      transform: rotate(0deg) translateY(-4px);
-      margin-right: 10px;
-    }
+      li::before {
+        content: ' ';
+        display: inline-block;
+        border: 2px solid #75bdd9;
+        border-radius: 3px;
+        width: 8px;
+        transform: rotate(0deg) translateY(-4px);
+        margin-right: 10px;
+      }
 
-    li {
-      margin: 8px;
+      li {
+        margin: 8px;
+      }
     }
   }
 }
 
 footer {
-  text-align: center;
   background: $footer-background;
 
   section {
@@ -419,25 +426,28 @@ footer {
     margin-bottom: 30px;
   }
 
-  h2::after {
-    display: none;
-  }
-
   .contact-icons {
     display: flex;
     justify-content: space-evenly;
   
     a {
-      font-size: 2.2rem;
+      font-size: 1.8rem;
       color: $contact-icons-color;
-      transition: color 0.3s ease;
       position: relative;
       display: block;
       text-decoration: none;
-  
-      &:hover{
-        color: #bbded6;
+      border: 3px solid $contact-icons-color;
+      border-radius: 45px;
+      padding: 10px 16px;
+
+      &:hover {
+
+        i {
+          transition: transform 0.1s ease;
+          transform: scale(1.35);
+        }
       }
+
     }
   }
 }
@@ -542,15 +552,19 @@ ol.ux {
     }
   }
 
-  footer {
-    h2 {
-      font-size: 3rem;
-    }
-  }
-
   ol.ux {
     img {
       width: 450px;
+    }
+  }
+
+  footer {
+    .contact-icons {
+      a {
+        font-size: 2.2rem;
+        border-width: 4px;
+        padding: 14px 22px;
+      }
     }
   }
 }
